test google drive link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     AV204 & MS200 & T201 ---> D[/Discharge\]
 
     click C "https://cr2c.stanford.edu/" "test link" _blank
-    click YW "file:///C:/Users/Y.Wu/OneDrive/CR2C/pop.txt" _blank
+    click YW "https://drive.google.com/drive/u/0/folders/1X-kRMVRrJOUa-NYpFpvW7ZTaTfEjoHVR" _blank
     click Mermaid "https://mermaid-js.github.io/mermaid/#/flowchart" _blank
 
     style C stroke:#333,stroke-width:7px
