--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
@@ -48,7 +47,7 @@
     AV204 & MS200 & T201 ---> D[/Discharge\]
 
     click C "https://cr2c.stanford.edu/" "test link" _blank
-    click YW "https://drive.google.com/drive/u/0/folders/1X-kRMVRrJOUa-NYpFpvW7ZTaTfEjoHVR" _blank
+    click YW "file:///C:/Users/Y.Wu/OneDrive/CR2C/pop.txt" _blank
     click Mermaid "https://mermaid-js.github.io/mermaid/#/flowchart" _blank
 
     style C stroke:#333,stroke-width:7px
