--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 
-  <script>
+	<script>
 	var callback = function(){
-		alert('A callback was triggered');
+		alert('Some information');
 	}
 	var config = {
 		startOnLoad:true,
@@ -17,7 +17,7 @@
 	};
 
 	mermaid.initialize(config);
-  </script>
+	</script>
 
     <p>Trying to prepare a flow chart for CR2C training. </p>
     <p><em> May 24, 2021 by Yulun Wu </em></p>
@@ -72,7 +72,6 @@ SAFMBR
     R300 ---- FT704
     R301 ---- LIT301
     R302 ---- FT700
-	
 	
 	click AV300 callback "Tooltip for a callback"
     </div>
